tests/ui/privacy/private-inferred-type-3.stderr
error: type `fn() {ext::priv_fn}` is private
  --> $DIR/private-inferred-type-3.rs:8:5
   |
LL |     ext::m!();
   |     ^^^^^^^^^ private type
   |
   = note: this error originates in the macro `ext::m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: static `ext::PRIV_STATIC` is private
  --> $DIR/private-inferred-type-3.rs:8:5
   |
LL |     ext::m!();
   |     ^^^^^^^^^ private static
   |
   = note: this error originates in the macro `ext::m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `ext::PrivEnum` is private
  --> $DIR/private-inferred-type-3.rs:8:5
   |
LL |     ext::m!();
   |     ^^^^^^^^^ private type
   |
   = note: this error originates in the macro `ext::m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `fn() {<u8 as ext::PrivTrait>::method}` is private
  --> $DIR/private-inferred-type-3.rs:8:5
   |
LL |     ext::m!();
   |     ^^^^^^^^^ private type
   |
   = note: this error originates in the macro `ext::m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `fn(u8) -> ext::PrivTupleStruct {ext::PrivTupleStruct}` is private
  --> $DIR/private-inferred-type-3.rs:8:5
   |
LL |     ext::m!();
   |     ^^^^^^^^^ private type
   |
   = note: this error originates in the macro `ext::m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `fn(u8) -> PubTupleStruct {PubTupleStruct}` is private
  --> $DIR/private-inferred-type-3.rs:8:5
   |
LL |     ext::m!();
   |     ^^^^^^^^^ private type
   |
   = note: this error originates in the macro `ext::m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `for<'a> fn(&'a Pub<u8>) {Pub::<u8>::priv_method}` is private
  --> $DIR/private-inferred-type-3.rs:8:5
   |
LL |     ext::m!();
   |     ^^^^^^^^^ private type
   |
   = note: this error originates in the macro `ext::m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 7 previous errors

